tests/ui/coroutine/arg-count-mismatch-on-unit-input.stderr
error[E0631]: type mismatch in coroutine arguments
  --> $DIR/arg-count-mismatch-on-unit-input.rs:5:13
   |
LL | fn foo() -> impl Coroutine<u8> {
   |             ^^^^^^^^^^^^^^^^^^ expected due to this
...
LL |     |_: ()| {}
   |     ------- found signature defined here
   |
   = note: expected coroutine signature `fn(u8) -> _`
              found coroutine signature `fn(()) -> _`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0631`.
